[gd_scene load_steps=3 format=2]

[ext_resource path="res://objects/cards/BaseCard.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[node name="BaseCard" type="Area2D"]
script = ExtResource( 2 )

[node name="CardBackground" type="Sprite" parent="."]

[node name="CardPicture" type="Sprite" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TitleLabel" type="Label" parent="."]
margin_left = -61.0
margin_top = -95.0
margin_right = 65.0
margin_bottom = -65.0
grow_horizontal = 2
text = "Example"
align = 1
